// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@emotion/babel-plugin-jsx-pragmatic fragment-only 1`] = `
"import * as React from 'react'

const F = () => <></>


      ↓ ↓ ↓ ↓ ↓ ↓

import { jsx as ___EmotionJSX } from \\"@emotion/core\\";
import * as React from 'react';

const F = () => <></>;"
`;

exports[`@emotion/babel-plugin-jsx-pragmatic minimal 1`] = `
"import * as React from 'react'

const P = () => <p />


      ↓ ↓ ↓ ↓ ↓ ↓

import { jsx as ___EmotionJSX } from \\"@emotion/core\\";
import * as React from 'react';

const P = () => <p />;"
`;
